# pyTCSPC

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  LICENSE.md  README.md  __init__.py  colorbar.py  environment.yml  flim.py  illprof.py  mmpy.yaml  mmpy.yml  mmpy_windows.yml  pyproject.toml  setup.cfg  util.py
batch/: sdt_to_images.py  structures.py
examples/FCS/: A488_diffusion_analysis.ipynb
examples/FCS/A488_data/: point_000.spc  point_001.spc  point_002.spc  point_003.spc  point_004.spc  point_005.spc  point_006.spc  point_007.spc  point_008.spc  point_009.spc
examples/Gibbssampling/: Gibbssampling.py  IRF-M2.sdt  analysis.ipynb
examples/fit_from_image/: analysis.ipynb
examples/fit_from_image/sample_data/: SDT_c01.sdt
examples/fit_oneexp/: analysis.ipynb
examples/fit_oneexp/sample_data/: IRF.sdt
examples/lifetime_image/: analysis.ipynb
examples/sample_data/: IRF.sdt
pyTCSPC/: __init__.py  batch.py  fcs.py  flim.py  flim_old.py  multipletau.py  nadhflim.py  plotting.py  presets.py  sdt.py  segmentation.py  spc.py  util.py
pyTCSPC/fcs/: spc.py
pyTCSPC/tests/: test_flimfit.py  test_utils.py
pyTCSPC/tests/data_flimfit/: test_IRF.sdt
segmentation/: hungarian.py  neural_network.py  segment.py
src/pytcspc/: __init__.py  fcs.py  flim.py  multipletau.py  sdt.py  sdtfile.py  util.py
tests/: _test_utils.py  test_flimfit.py
tests/data_flimfit/: test_IRF_dc_M1.csv  test_IRF_dc_M2.csv  test_data_decay_curve.csv
