[metadata]
name = pyTCSPC
version = attr: 1.0.0
author = Easun Arunachalam
author_email = arunachalam@g.harvard.edu
url = https://github.com/easunarunachalam/pyTCSPC
description = Time-correlated single photon counting (TCSPC) data analysis
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    dask>=2021.10.0
    joblib>=1.1.0
    matplotlib>=3.5.0
    multipletau>=0.4.1
    pandas>=1.3.4
    python>=3.9.7
    scipy>=1.12.0
    scikit-image>=0.18
    sdtfile>=2024.5.24
    tqdm>=4.62.3
    xarray>=2023.6.0
    zarr>=2.13.3

[options.package_data]
example = *.sdt, *ipynb
* = README.md